<resources>
    <string name="app_name">Adstod</string>
    <string name="previous_button">
        Previous
    </string>
    <string name="accept_button">
        Accept
    </string>
    <string name="english_button">
        English
    </string>
    <string name="icelandic_button">
        Íslenska
    </string>
    <string name="polish_button">
        Polski
    </string>
    <string name="next_button">
        Next
    </string>
    <string name="option_MjogSam">
        Mjög sammála
    </string>
    <string name="option_FrekarSam">
        Frekar sammála
    </string>
    <string name="option_HvorkiNe">
        Hvorki né
    </string>
    <string name="option_FrekarOsam">
        Frekar ósammála
    </string>
    <string name="option_MjogOsam">
        Mjög ósammála
    </string>
    <string name="question_Akureyri">
        Akureyri is the largest city in Iceland
    </string>
    <string name="question_oceans">
        The Pacific Ocean is larger that the Atlantic Ocean.
    </string>
    <string name="question_mideast">
        The Suez Canal connects the Red Sea and the India Ocean
    </string>
    <string name="question_africa">
        The source of the Nile River is in Egypt
    </string>
    <string name="question_americas">
        The Amazon River is the longest river in the Americas.
    </string>
    <string name="question_asia">
        Lake Baikal is the world\'s oldest and deepest freshwater lake.
    </string>
    <string name="title_activity_main">MainActivity</string>


</resources>
