<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <!--basically hello world
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        -->
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/option_MjogSam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#1A99C4"
                android:text="@string/option_MjogSam">
            </RadioButton>

            <RadioButton
                android:id="@+id/option_FrekarSam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#1A99C4"
                android:text="@string/option_FrekarSam">
            </RadioButton>

            <RadioButton
                android:id="@+id/option_HvorkiNe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#1A99C4"
                android:text="@string/option_HvorkiNe">
            </RadioButton>

            <RadioButton
                android:id="@+id/option_FrekarOsam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#1A99C4"
                android:text="@string/option_FrekarOsam">
            </RadioButton>

            <RadioButton
                android:id="@+id/option_MjogOsam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#1A99C4"
                android:text="@string/option_MjogOsam">
            </RadioButton>

        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_button"/>
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button" />

    </LinearLayout>

</LinearLayout>